# olio-ohjelmointi

Teht3/: CMakeLists.txt  chef.cpp  chef.h  main.cpp
Teht4/: asunto.cpp  asunto.h  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h  main.cpp
Teht5/: CMakeLists.txt  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h  main.cpp
Teht6/: mainwindow.cpp  mainwindow.h  mainwindow.ui
teht1/: .gitignore  main.cpp
teht2/: CMakeLists.txt  game.cpp  game.h  main.cpp
teht7/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
